@@ -5,6 +5,7 @@ depends:
     process
     currency_cog
     company_cog
+    bank_cog
     benefit
     contract_insurance
     document
