@@ -1,5 +1,7 @@
 from trytond.pool import Pool
 from .claim import *
+from .contract import *
+from .wizard import *
 
 
 def register():
@@ -8,4 +10,6 @@ def register():
         Loss,
         Claim,
         ClaimService,
+        CoveredElement,
+        ModifyCoveredElementInformation,
         module='claim_health', type_='model')
