@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<tryton>
+    <data>
+        <!--################################################################ -->
+        <!-- Covered Elements -->
+        <!--################################################################ -->
+        <record model="ir.ui.view" id="covered_element_view_form">
+            <field name="model">contract.covered_element</field>
+            <field name="inherit" ref="contract_insurance.covered_element_view_form"/>
+            <field name="name">covered_element_form</field>
+        </record>
+        <record model="ir.ui.view" id="covered_element_simple_view_form">
+            <field name="model">contract.covered_element</field>
+            <field name="inherit" ref="contract_insurance.covered_element_simple_view_form"/>
+            <field name="name">covered_element_simple_form</field>
+        </record>
+    </data>
+</tryton>
