@@ -3,6 +3,11 @@ depends:
     ir
     res
     claim
+    health
     benefit_health
+extra_depends:
+    endorsement_insurance
 xml:
     claim.xml
+    contract.xml
+    wizard.xml
