@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<data>
+    <xpath expr="/form" position="inside">
+        <newline/>
+        <label name="claim_bank_account"/>
+        <field name="claim_bank_account"/>
+    </xpath>
+</data>
