@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<tryton>
+    <data depends="endorsement_insurance">
+        <record model="ir.ui.view" id="covered_element_endorsement_view_form">
+            <field name="model">contract.covered_element</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="endorsement_insurance.covered_element_endorsement_view_form"/>
+            <field name="name">covered_element_endorsement_form</field>
+        </record>
+        <record model="ir.ui.view" id="covered_element_endorsement_view_tree">
+            <field name="model">contract.covered_element</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="endorsement_insurance.covered_element_endorsement_view_tree"/>
+            <field name="name">covered_element_endorsement_tree</field>
+        </record>
+    </data>
+</tryton>
