@@ -1,1 +1,2 @@
+* Add claim bank account on covered element
 * Module creation
